fixed alignment

--- a/css/site.css
+++ b/css/site.css
@@ -110,7 +110,7 @@ body{
 }
 
 #html-header{
-    padding-bottom: 6px;
+    padding-bottom: 3px;
 }
 
 .nav-tabs .nav-link{
